# tiny-todo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  test_todo.py  todo.py
.github/workflows/: ci.yml
