[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-todo-cli"
version = "0.1.0"
description = "A minimal CLI todo list manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "TopherBot", email = "topherbot@proton.me"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=5.0",
]

[project.scripts]
"todo" = "todo:cli"
